updated width bleeding issue by changing the .downPortfolio width from 800px to width 100%

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -18,3 +18,7 @@ a {
 p {
     line-height: 3rem;
 }
+
+* {
+    border: red 3px red;
+}
