--- a/styles/styles.css
+++ b/styles/styles.css
@@ -254,6 +254,10 @@ p {
   line-height: 3rem;
 }
 
+* {
+  border: red 3px red;
+}
+
 body {
   background-color: #222222;
 }
@@ -449,6 +453,7 @@ input[type="checkbox"],
 
 .aboutImgBox {
   width: 40%;
+  margin-bottom: 100px;
 }
 
 .aboutImgBox img {
@@ -471,6 +476,10 @@ input[type="checkbox"],
 
 .aboutParaBox {
   width: 40%;
+}
+
+.aboutParaBox p:first-child {
+  padding-bottom: 0px;
 }
 
 .skillsContentBox {
@@ -752,7 +761,7 @@ input[type="submit"]:focus {
 }
 
 .downPortfolio {
-  width: 800px;
+  width: 100%;
   text-align: center;
   margin-top: 50px;
 }
